# App-Release-Manager

./: .dockerignore  Cargo.toml  Dockerfile
.github/workflows/: docker-publish.yml
src/: main.rs  routes.rs  schema.rs
