[package]
name = "updater"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.8", features = ["multipart"]}
chrono = "0.4.43"
octocrab = "0.49.5"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
